# PyProjects

./: .gitignore  README.md
DNS-Plotly/: draw.py  output.json  pyproject.toml
Image2Base64/: pyproject.toml
Image2Base64/src/: ImageToBase64.py
PyPhoto/: .flake8  .gitignore  .pylintrc  Install.bat  InstallConda.bat  README.md  WORK  install.sh  setup.cfg  start.bat  watch.bat
PyPhoto/Raspberry_Pi_Camera_Stand_274111/: Kamerastand.stl  Thumbs.db
PyPhoto/Raspberry_Pi_Camera_Stand_274111/files/: Kamerastand-1.stl  Kamerastand-2.stl  Kamerastand.dgn  Kamerastand.stl
PyPhoto/src/: main.py
PyPhoto/src/classes/: LoadFoto.py
PyPhoto/src/resources/: package-lock.json  package.json
PyPhoto/src/resources/css/: ajax-loader.css  ajax-loader.css.map  fancy_title.css  fancy_title.css.map  style.css.map  styles.css  styles.css.map
PyPhoto/src/resources/css/global/: Main.css  Main.css.map
PyPhoto/src/resources/scss/: ajax-loader.scss  fancy_title.scss  styles.scss
PyPhoto/src/resources/scss/global/: Main.scss  _breakpoints.scss  _reset.scss
PyPhoto/src/templates/: index.html
