# Usage: 
#   Normal Install: pip install -e .
#   Build: python -m build
# be sure setuptools and build are in latest version
# pip install --upgrade setuptools build

[project]
name = "DNSPlotly"
version = "1.0.0"
authors = [
    {name = "Mag. Stefan Hagmann"},
]
description = "Draw soemthing"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
dependencies = [
    'plotly',
    'kaleido' 
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

